<resources>
    <string name="app_name">写真記録ダイエット日記</string>
    <string name="initial_settings_title">初期設定</string>
    <string name="initial_settings_message">アプリをインストールいただき、ありがとうございます。まず、初期設定をお願いします。</string>
    <string name="home">ホーム</string>
    <string name="record">記録</string>
    <string name="gallery">ギャラリー</string>
    <string name="graphe">グラフ</string>
    <string name="setting">設定</string>
    <string name="review_url">https://play.google.com/store/apps/details?id=org.macho.beforeandafter&amp;hl=ja</string>
    <string name="best_weight_label">ベスト</string>
    <string name="goal_label">目標</string>
    <string name="set_goal">目標を設定する</string>
    <string name="first_label">最初</string>
    <string name="latest_label">最新</string>
    <string name="progress_title">体重の目標達成度</string>
    <string name="progress_day_template">%d 日目</string>
    <string name="progress_template">%s %%達成</string>
    <string name="progress_achieve_expect">%s 日後達成見込み</string>
    <string name="elapsed_days_help_message">開始時からの経過日数です。開始時は、デフォルトで最初に記録した日になっています。設定＞目標でカスタマイズできます。</string>
    <string name="archive_expect_days_help_message">今のペースだと何日後に目標を達成できるかを表しています。あくまで目安です。</string>
    <string name="body_fat_progress_title">体脂肪率の目標達成度</string>
    <string name="weight_tendency_title">体重の傾向</string>
    <string name="one_week_tendency">1週間の傾向</string>
    <string name="thirty_days_tendency">30日間の傾向</string>
    <string name="one_year_tendency">1年間の傾向</string>
    <string name="one_week_tendency_help">以下の(2)から(1)を引いた値です。この値を表示するには、今週1回以上と先週にも1回以上 記録している必要があります。\n  (1)この1週間の平均\n  (2)その前の1週間の平均</string>
    <string name="thirty_days_tendency_help">以下の(2)から(1)を引いた値です。この値を表示するには、ここ30日間に1回以上とその前の30日間に1回以上 記録している必要があります。\n  (1)この30日間の平均\n  (2)その前の30日間の平均</string>
    <string name="one_year_tendency_help">以下の(2)から(1)を引いた値です。この値を表示するには、ここ365日間に1回以上とその前の365日間に1回以上 記録している必要があります。\n  (1)この1年間の平均\n  (2)その前の1年間の平均</string>
    <string name="body_fat_tendency_title">体脂肪率の傾向</string>
    <string name="bmi_title">BMI (ボディマス指数)</string>
    <string name="bmi_class_under_weight">やせ気味</string>
    <string name="bmi_class_normal">標準</string>
    <string name="bmi_class_over_weight">太り気味</string>
    <string name="bmi_class_obese">太っている</string>
    <string name="ideal_weight_label">あなたの標準体重:</string>
    <string name="set_height">身長を設定する</string>
    <string name="front_photo_summary_by_weight_title">正面の写真のまとめ(体重)</string>
    <string name="side_photo_summary_by_weight_title">側面の写真のまとめ(体重)</string>
    <string name="other1_photo_summary_by_weight_title">その他1の写真のまとめ(体重)</string>
    <string name="other2_photo_summary_by_weight_title">その他2の写真のまとめ(体重)</string>
    <string name="other3_photo_summary_by_weight_title">その他3の写真のまとめ(体重)</string>
    <string name="front_photo_summary_by_rate_title">正面の写真のまとめ(体脂肪率)</string>
    <string name="side_photo_summary_by_rate_title">側面の写真のまとめ(体脂肪率)</string>
    <string name="other1_photo_summary_by_rate_title">その他1の写真のまとめ(体脂肪率)</string>
    <string name="other2_photo_summary_by_rate_title">その他2の写真のまとめ(体脂肪率)</string>
    <string name="other3_photo_summary_by_rate_title">その他3の写真のまとめ(体脂肪率)</string>
    <string name="empty_title">記録がありません。</string>
    <string name="empty_description">右下のえんぴつボタンで\n記録を追加してください。</string>
    <string name="interstitial_message">毎日欠かさず記録すると、全画面広告は出なくなります。</string>
    <string name="date_label">日時</string>
    <string name="weight_label">体重(%s)</string>
    <string name="rate_label">体脂肪率(%)(任意)</string>
    <string name="save">保存</string>
    <string name="cancel">キャンセル</string>
    <string name="delete">削除</string>
    <string name="memo_label">メモ (任意)</string>
    <string name="front_image_label">正面の写真 (任意)</string>
    <string name="side_image_label">側面の写真 (任意)</string>
    <string name="add_images_button_label">さらに写真を追加する</string>
    <string name="other_image1">その他の写真1</string>
    <string name="other_image2">その他の写真2</string>
    <string name="other_image3">その他の写真3</string>
    <string name="delete_record_message">削除すると元に戻せませんがよろしいですか？</string>
    <string name="camera_in_preparation">カメラは準備中です。少々お待ちください。</string>
    <string name="front">正面</string>
    <string name="side">横</string>
    <string name="other1">その他1</string>
    <string name="other2">その他2</string>
    <string name="other3">その他3</string>
    <string name="save_to_shared_storage">端末のギャラリーに保存する</string>
    <string name="three_weeks">3週間</string>
    <string name="three_month">3ヶ月</string>
    <string name="one_year">1年</string>
    <string name="legend_weight">体重(%s)</string>
    <string name="legend_rate">体脂肪率(%)</string>
    <string name="edit_unit_title">単位の設定</string>
    <string name="edit_unit_description">体重の単位、身長の単位を設定します。</string>
    <string name="weight_unit_label">体重の単位</string>
    <string name="height_unit_label">身長の単位</string>
    <string name="goal_title">目標</string>
    <string name="goal_description">目標体重・目標体脂肪率を設定します。</string>
    <string name="goal_weight_label">目標体重(%s)</string>
    <string name="goal_rate_label">目標体脂肪率(%)</string>
    <string name="customize_start_time">ダイエット開始時をカスタマイズする</string>
    <string name="start_time_label">ダイエット開始時</string>
    <string name="edit_height_title">身長</string>
    <string name="edit_height_description">BMIを計算するため、身長を設定します。</string>
    <string name="edit_height_message">BMIの計算のため、身長を入力してください。(任意)</string>
    <string name="edit_height_label">身長(cm)</string>
    <string name="edit_feet_label">フィート</string>
    <string name="edit_inch_label">インチ</string>
    <string name="alarm_title">アラーム</string>
    <string name="alarm_description">決まった時間に通知して、記録し忘れを防ぎます。</string>
    <string name="alarm_switch_label">通知を有効にする</string>
    <string name="alarm_time_label">通知する時間</string>
    <string name="dashboard_setting_title">ホームの表示内容の設定</string>
    <string name="dashboard_setting_description">ホームの表示内容の設定します。</string>
    <string name="default_weight_title">体重と体脂肪率のデフォルト入力</string>
    <string name="default_weight_description">体重と体脂肪率のデフォルト入力を有効にすると、記録時に前回の体重と体脂肪率がはじめから入力された状態になります。体重と体脂肪率を+ボタン/-ボタンの長押しで入力したいときに便利です。</string>
    <string name="preference_section_header_camera">カメラ</string>
    <string name="guide_photo_mode_setting_title">ガイドフォトの設定</string>
    <string name="guide_photo_mode_setting_description">カメラで写真撮影時に表示するガイドフォトのモードを設定します。ダイエット開始時の写真を表示するか、最新の写真を表示するか選択できます。</string>
    <string name="guide_photo_mode_first">ダイエット開始時の写真を表示</string>
    <string name="guide_photo_mode_latest">最新の写真を表示</string>
    <string name="camera_timer_title">カメラのタイマーの設定</string>
    <string name="camera_timer_description">カメラのタイマーの時間を設定します。</string>
    <string name="seconds">秒</string>
    <string name="delete_all_title">全データ削除</string>
    <string name="delete_all_description">全データを削除します。</string>
    <string name="delete_all_confirmation_message">全データを削除します。削除すると元に戻せませんがよろしいですか？</string>
    <string name="ok">OK</string>
    <string name="preference_item_change_or_revoke_consent_title">同意の撤回・同意内容の変更</string>
    <string name="preference_item_change_or_revoke_consent_description">同意の撤回、または同意内容の変更を行います。</string>
    <string name="preference_item_backup_title">バックアップ</string>
    <string name="preference_item_backup_description">記録をバックアップします。</string>
    <string name="preference_item_restore_title">バックアップデータの復元</string>
    <string name="preference_item_restore_description">バックアップデータを復元します。</string>
    <string name="preference_section_header_base_settings">基本設定</string>
    <string name="preference_section_header_privacy">プライバシー</string>
    <string name="preference_section_header_data">データ管理</string>
    <string name="preference_pin_title">暗証番号を有効にする</string>
    <string name="preference_pin_description">アプリを開くときの暗証番号を設定します。</string>
    <string name="backup_dialog_title">データのバックアップ</string>
    <string name="backup_dialog_message">バックアップするにはCMをみる必要があります。よろしいですか？\n<small>※注意点※\n・通信量が多くなるためWi-Fi環境で行うことを推奨します。\n・GoogleDriveに保存するためGoogleアカウントが必要です。</small></string>
    <string name="backup_dialog_ok_button">CMをみる</string>
    <string name="backup_dialog_ok_button_loading">準備中</string>
    <string name="finish">終了</string>
    <string name="backup_message">バックアップ中です。</string>
    <string name="backup_message_detail">バックアップには時間がかかります。しばらくお待ちください。</string>
    <string name="backup_status_message_title_format">%s(ステップ %d / %d)</string>
    <string name="backup_status_message_title_saving_records">記録データを保存中</string>
    <string name="backup_status_message_title_saving_images">画像データを保存中</string>
    <string name="backup_status_message_description_format">写真ファイルを保存中(%d/%d)</string>
    <string name="backup_status_message_complete">バックアップが完了しました。</string>
    <string name="backup_error_title">バックアップエラー</string>
    <string name="backup_error_description">バックアップに失敗しました。しばらくしてからもう一度お試しください。</string>
    <string name="backup_error_description_no_records">バックアップする記録データがありません。</string>
    <string name="backup_error_drive_connection_error">GoogleDriveとの接続に失敗しました。</string>
    <string name="backup_error_files_create_failed">画像ファイルのアップロードに失敗しました。</string>
    <string name="backup_error_no_enough_space">このGoogleアカウントのGoogle Driveには十分な空き容量がありません。</string>
    <string name="backup_error_network_timeout">ネットワークが安定しないため、タイムアウトエラーが発生しました。しばらくしてからもう一度お試しください。</string>
    <string name="backup_error_ssl_connection_failed">Google DriveとのSSL接続の確立に失敗しました。しばらくたってからアプリを終了・再起動しもう一度お試しください。</string>
    <string name="restore_dialog_title">バックアップデータの復元</string>
    <string name="restore_dialog_message">バックアップしたデータを復元します。よろしいですか？\n<small>※注意点※\n・通信量が多くなるためWi-Fi環境で行うことを推奨します。\n・GoogleDriveに保存するためGoogleアカウントが必要です。</small></string>
    <string name="restore_resume_dialog_title">データ復元の再開</string>
    <string name="restore_resume_dialog_message">前回行ったデータの復元がまだ完了していません。途中から再開しますか？</string>
    <string name="restore_resume_dialog_neutral">いいえ、最初から復元します</string>
    <string name="restore_resume_dialog_ok">はい、途中から再開します</string>
    <string name="restore_message">復元中です。</string>
    <string name="restore_message_detail">バックアップデータの復元には時間がかかります。しばらくお待ちください。</string>
    <string name="restore_status_message_title_format">%s(ステップ %d / %d)</string>
    <string name="restore_status_message_title_searching_file">バックアップファイルを検索中</string>
    <string name="restore_status_message_title_fetching_records">記録データを復元中</string>
    <string name="restore_status_message_title_fetching_images">画像データを復元中</string>
    <string name="restore_status_message_description_format">写真ファイルを復元中(%d/%d)</string>
    <string name="restore_status_message_complete">復元が完了しました。</string>
    <string name="restore_error_title">復元エラー</string>
    <string name="restore_error_cannot_fetch_metadata_description">GoogleDriveにバックアップデータがありません。</string>
    <string name="restore_error_file_format_invalid">GoogleDriveから取得したバックアップファイルのフォーマットが不正です。もう一度バックアップをし直してください。</string>
    <string name="restore_error_message_cannot_restore_all_photo">%d枚の写真を復元できませんでした。これらの写真を復元するにはしばらく経ってからもう一度お試しください。\n<small>※もう一度試しても成功しない場合、バックアップ時になんらかの理由で写真ファイルが壊れている可能性があります。その場合、もう一度バックアップをしなおしてください。</small></string>
    <string name="restore_error_no_data_title">記録データを1件も取得できませんでした。</string>
    <string name="restore_error_no_data_description">記録データを1件も取得できませんでした。もう一度バックアップができているかご確認ください。</string>
    <string name="pin_enable_title">暗証番号の登録</string>
    <string name="pin_enable_message">暗証番号を設定してください。</string>
    <string name="pin_enable_message_confirm">確認のため、もう一度入力してください。</string>
    <string name="preference_inquiry_title">不具合の報告・改善のご要望</string>
    <string name="admob_unit_id" translatable="false">ca-app-pub-2062076007725970/4292543358</string>
    <string name="action_bar_title_settings">設定</string>
    <string name="action_bar_title_edit_goal">目標設定</string>
    <string name="action_bar_title_backup">バックアップ</string>
    <string name="action_bar_title_restore">データ復元</string>
    <string name="alarm_setting_dialog_message">毎日、記録を継続するためにアラームを設定しましょう。</string>
    <string name="alarm_setting_dialog_note">※設定画面から変更できます。</string>
</resources>