<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/settings"
    app:startDestination="@id/preferenceFragment">

    <fragment
        android:id="@+id/preferenceFragment"
        android:name="org.macho.beforeandafter.preference.PreferenceFragment"
        android:label="@string/action_bar_title_settings" >
        <action
            android:id="@+id/action_preferenceFragment_to_editGoalFragment"
            app:destination="@id/editGoalFragment" />
        <action
            android:id="@+id/action_preferenceFragment_to_backupDialog4"
            app:destination="@id/backupDialog4" />
        <action
            android:id="@+id/action_preferenceFragment_to_restoreDialog"
            app:destination="@id/restoreDialog" />
        <action
            android:id="@+id/action_preferenceFragment_to_rewardDialog2"
            app:destination="@id/rewardDialog2" />
        <action
            android:id="@+id/action_preferenceFragment_to_bugReportFragment"
            app:destination="@id/bugReportFragment" />
    </fragment>
    <fragment
        android:id="@+id/editGoalFragment"
        android:name="org.macho.beforeandafter.preference.editgoal.EditGoalFragment"
        android:label="@string/action_bar_title_edit_goal" />
    <fragment
        android:id="@+id/backupFragment"
        android:name="org.macho.beforeandafter.preference.backup.BackupFragment"
        android:label="@string/action_bar_title_backup" />
    <dialog
        android:id="@+id/backupDialog4"
        android:name="org.macho.beforeandafter.preference.backup.BackupDialog"
        android:label="BackupDialog" >
        <action
            android:id="@+id/action_backupDialog4_to_backupFragment"
            app:destination="@id/backupFragment" />
    </dialog>
    <dialog
        android:id="@+id/restoreDialog"
        android:name="org.macho.beforeandafter.preference.restore.RestoreDialog"
        android:label="RestoreDialog" >
        <action
            android:id="@+id/action_restoreDialog_to_restoreFragment"
            app:destination="@id/restoreFragment" />
    </dialog>
    <fragment
        android:id="@+id/restoreFragment"
        android:name="org.macho.beforeandafter.preference.restore.RestoreFragment"
        android:label="@string/action_bar_title_restore" />
    <dialog
        android:id="@+id/rewardDialog2"
        android:name="org.macho.beforeandafter.preference.backup.RewardDialog"
        android:label="RewardDialog" >
        <action
            android:id="@+id/action_rewardDialog2_to_backupFragment"
            app:destination="@id/backupFragment" />
    </dialog>
    <fragment
        android:id="@+id/bugReportFragment"
        android:name="org.macho.beforeandafter.preference.bugreport.BugReportFragment"
        android:label="@string/preference_inquiry_title" />
</navigation>