<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:background="#B71C1C"
        android:orientation="vertical"
        android:id="@+id/ad_layout"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/admob_unit_id">
        </com.google.android.gms.ads.AdView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/messageLayout"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight=".166"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:text="@string/backup_message"
            android:textSize="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/backup_message_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/statusLayout"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight=".166"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:id="@+id/backupStatusMessageTitle"
            android:text=""
            android:textSize="17.5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/backupStatusMessageDescription"
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <ProgressBar
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:id="@+id/progressBar"
            android:progressTintMode="src_in"
            android:progressTint="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_margin="30dp"
            android:indeterminate="false" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/buttonLayout"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_weight=".166"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <Button
            android:text="@string/cancel"
            android:id="@+id/cancelButton"
            android:layout_weight=".5"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <Button
            android:text="@string/finish"
            android:id="@+id/finishButton"
            android:layout_weight=".5"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>