<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/alarmSettingMessage"
        android:text="@string/alarm_setting_dialog_message"
        android:textSize="16sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/alarmSettingNote"
        android:text="@string/alarm_setting_dialog_note"
        android:textSize="12sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/alarmSettingMessage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/alarmTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm_time_label"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/alarmTimeButton"
        app:layout_constraintEnd_toStartOf="@+id/alarmTimeButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/alarmTimeButton" />

    <Button
        android:id="@+id/alarmTimeButton"
        style="?android:attr/borderlessButtonStyle"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:textSize="16sp"
        android:text="hh:mm"
        android:textColor="@color/light_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/alarmTimeLabel"
        app:layout_constraintTop_toBottomOf="@id/alarmSettingNote" />

</androidx.constraintlayout.widget.ConstraintLayout>