<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:background="#B71C1C"
        android:orientation="vertical"
        android:id="@+id/ad_layout"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <net.nend.android.NendAdView
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/nend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            NendApiKey="e579cd0e4127e9caba58b3531b95932972b139ef"
            NendSpotId="824865" />
    </LinearLayout>
    <LinearLayout
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_weight=".166"
        android:layout_height="0dp">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:hint="@string/weight_label"
                android:inputType="numberDecimal"
                android:id="@+id/weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_weight="0.166"
        android:layout_height="0dp">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:inputType="numberDecimal"
                android:hint="@string/rate_label"
                android:id="@+id/rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_weight="0.166"
        android:layout_height="0dp">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:hint="@string/memo_label"
                android:id="@+id/memo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:padding="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_weight=".5"
        android:layout_height="0dp">
        <LinearLayout
            android:padding="10dp"
            android:layout_weight=".5"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                android:src="@drawable/image4463"
                android:id="@+id/frontImage"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:padding="10dp"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="match_parent">
            <ImageView
                android:src="@drawable/image4467"
                android:id="@+id/sideImage"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/button_layout"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_weight=".166"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <Button
            android:text="@string/cancel"
            android:id="@+id/cancel"
            android:layout_weight=".5"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <!--
        <Button
            android:text="@string/delete"
            android:id="@+id/delete"
            android:layout_weight=".5"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
            -->
        <Button
            android:text="@string/save"
            android:id="@+id/save"
            android:layout_weight=".5"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>